force-app/main/default/objects/Customer_Risk__c/Customer_Risk__c.object-meta.xml
<CustomObject>
    <label>Customer Risk</label>
    <nameField>
        <displayFormat>RISK-{000000}</displayFormat>
        <label>Customer Risk Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>