force-app/main/default/objects/Customer_Risk__c/fields/Mitigation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Notes__c</fullName>
    <label>Mitigation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>