force-app/main/default/objects/Customer_Risk__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <formula>VALUE(TEXT( Impact_Level__c )) * VALUE(TEXT( Probability_Level__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>