force-app/main/default/objects/Customer_Risk__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <label>Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>